[package]
name = "phones_app"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"

# Web server framework
axum = "0.7"

# Tokio async runtime (required by Axum)
tokio = { version = "1", features = ["full"] }

# Optional: for enabling CORS headers

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["full"] }

